card overlap fixed on internal pages

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@
     text-align: center;
     box-sizing: border-box;
     flex-shrink: 0;
-    position:relative;
 }
 
 .product-card:hover {
